# demoproject

./: app.py  database.py  entity_recognizer.py  models.py  pdf2text.py  project.db  pyproject.toml  routes.py
analysis/: analysis_v1.ipynb
common/: file_utils.py  job_matcher_utils.py
templates/: All_cv.html  All_jobs.html  Dashboard.html  add_job2.html  common.html  display_list.html  foam.html  index.html  layout.html  login.html  menu.html  notification.html  register.html  settings.html  upload.html  upload_resume.html  view_cv.html  view_job.html
templates/layout/: base.html
