[tool.poetry]
name = "demoproject001"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
jupyter = "^1.0.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
setuptools = "^69.0.0"
sqlalchemy = "^2.0.25"
seaborn = "^0.13.1"
plotly = "^5.18.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
